--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,10 @@
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.55.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "sass": "^1.69.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
